[project]
name = "pygad_utils"
version = "0.1.1"
description = "Utilities to work with PyGAD package for genetic algorithm optimization"
authors = [
    {name = "Anton Golovanov"},
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pygad_utils*"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]